examples/fail/member2.niu
struct Hoge {
  a: u64,
} {}

fn main() -> void {
  let hoge = Hoge { b: 91 };
}
